# Transfer

./: BashCheats.odt  CMakeLecture.odp  CPP-Memory.odp  Cpp-mem-layout.odg  LinuxCheatSheet.md
CMakeTutorial/: CMakeLecture.odp
CMakeTutorial/Step01/: CMakeLists.txt  __INSTRUCTIONS__.md
CMakeTutorial/Step02/: CMakeLists-backup.txt  CMakeLists.txt  __INSTRUCTIONS__.md
CMakeTutorial/Step03/: CMakeLists-backup.txt  __INSTRUCTIONS__.md
CMakeTutorial/Step04/: CMakeLists-backup.txt  __INSTRUCTIONS__.md
CMakeTutorial/Step04/src/: CMakeLists-backup.txt
CMakeTutorial/Step05/: CMakeLists.txt  __INSTRUCTIONS__.md
CMakeTutorial/Step05/src/: CMakeLists-backup.txt
CMakeTutorial/Step06/: CMakeLists.txt  __INSTRUCTIONS__.md
CMakeTutorial/Step06/src/: CMakeLists.txt
CMakeTutorial/Step07/: __INSTRUCTIONS__.md
CMakeTutorial/Step07/src/: CMakeLists.txt
CMakeTutorial/tmp/: CMakeLists.txt
TemplatesLecture/: C++ Templates  make_all
TemplatesLecture/step01/: hashDef.cc
